// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationButton renders 1`] = `
<button
  className="css-1nylyli css-1wf9u1s"
  dangerouslySetInnerHTML={
    Object {
      "__html": "+",
    }
  }
  onClick={[Function]}
/>
`;

exports[`OperationButton renders a class name 1`] = `
<button
  className="css-1nylyli css-1wf9u1s css-aori8y"
  dangerouslySetInnerHTML={
    Object {
      "__html": "+",
    }
  }
  onClick={[Function]}
/>
`;
